--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', sans-serif;
+
 }
-.body{
+.Container{
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding: 50px 35px;
   background-color: rgb(66, 66, 66);
+}
+.body{
+  overflow: hidden;
 }
 .card {
   background-color: rgb(100, 95, 89);
@@ -19,8 +27,9 @@
   align-items: center;
   border-radius: 8px; 
   padding: 12px; 
-  height: auto;
-  width: 300px;
+  width: 325px;
+  height: 180px;
+  margin: 6px;
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -28,8 +37,8 @@
   background-color: rgb(100, 95, 89);
   display: flex;
   flex-direction: column;
-  width: 100%; 
-  height: auto;
+  width: 325px;
+  height: 180px;
   border-radius: 6px;
   padding: 8px;
 }
@@ -65,4 +74,59 @@ h1, h2, h3, h4, h5, h6, p, a {
   margin-top: 4px; 
   color: white;
   text-decoration: none; 
+}
+
+
+/* Section CSS */
+
+.bgSection{
+  margin: 0;
+  padding: 10px;
+  width: 100%;
+  height: 300px;
+}
+.imgSec h1{
+  height: 350px;
+  font-size: 75px;
+  font-weight: bolder;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Navbar CSS */
+
+.Navbar{
+  /* background-color: rgb(171, 171, 171); */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.Navbar img{
+  padding: 15px;
+}
+.list01{
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 5px;
+  list-style: none;
+}
+.list01 a{
+  text-decoration: none;
+  color: black;
+  margin-right: 10px;
+  padding: 15px;
+  overflow: hidden;
+}
+
+.navList li:last-child a {
+  padding: 10px 20px;
+  border: 2px solid rgba(240, 184, 17, 0.854);
+  border-radius: 8px;
+  color: #000; /* Adjust the text color as needed */
+  text-decoration: none; /* Remove underline */
+  font-weight: bold; /* Make the text bold */
 }
