--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-start;
-  padding: 50px 0 10px 0;
+  padding: 50px  10px 50px 0px;
   background-color: rgb(66, 66, 66);
 }
 
@@ -30,24 +30,23 @@
   align-items: center;
   border-radius: 8px; 
   padding: 12px; 
-  width: 325px;
+  width: 375px;
   height: 180px;
   margin: 6px;
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .img01 {
-  width: 100px; 
-  height: 100px; 
-  margin-right: 15px;
+  width: 230px; /* Adjust the width to make the image larger */
+  height: 100%;
+  margin-right: 15px; /* Space between image and content */
 }
 
 .img01 img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 8px; 
-}
+  object-fit:cover;
+}  
 
 .content {
   background-color: rgb(100, 95, 89);
