--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 /* Navbar CSS */
 
 .Navbar{
-  background-color: rgb(171, 171, 171);
+  /* background-color: rgb(171, 171, 171); */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
